UPDATE INDEX SOCIALMEDIA

--- a/index.html
+++ b/index.html
@@ -22,8 +22,8 @@
 			</div>
             <div class="social-media-links">
                 <a href="https://hackcess.org"><i class="fab fa-creative-commons"></i></a>
-                <a href="https://iut-roanne.univ-st-etienne.fr/fr/index.html"><img src="images/call.png" class="social-media" alt="facebook-logo"></a>
-                <a href="https://fr.linkedin.com/school/lut-de-roanne/"><img src="images/linkedin logo.png" class="social-media" alt="linkedin-logo"></a>
+                <a href="https://iut-roanne.univ-st-etienne.fr/fr/index.html"><i class="fa fa-phone" aria-hidden="true"></i></a>
+                <a href="https://fr.linkedin.com/school/lut-de-roanne/"><i class="fab fa-linkedin"></i></a>
                 <a href="https://www.instagram.com/hack_cess/"><img src="Images/instagram.png" class="social-media" alt="Instagram-Logo"> </a>
                 <a href="https://discord.io/hackcess"><img src="Images/discord.png" class="social-media" alt="Instagram-Logo"> </a>
             </div>
