--- a/index.html
+++ b/index.html
@@ -21,9 +21,9 @@
                 <li><img src="Images/iut.png" style="max-width:200%; max-height:200%; left:10% ; position: absolute;;text-align:center;"><br><br></li>
 			</div>
             <div class="social-media-links">
-                <a href="https://hackcess.org"><i class="fab fa-creative-commons"></i></a>
-                <a href="https://iut-roanne.univ-st-etienne.fr/fr/index.html"><i class="fa fa-phone" aria-hidden="true"></i></a>
-                <a href="https://fr.linkedin.com/school/lut-de-roanne/"><i class="fab fa-linkedin"></i></a>
+                <a href="https://hackcess.org"><img src="Images/website.avif" class="social-media" alt="website"></a>
+                <a href="https://iut-roanne.univ-st-etienne.fr/fr/index.html"><img src="Images/call.png" class="social-media" alt="facebook-logo"></a>
+                <a href="https://fr.linkedin.com/school/lut-de-roanne/"><img src="Images/linkedin logo.png" class="social-media" alt="linkedin-logo"></a>
                 <a href="https://www.instagram.com/hack_cess/"><img src="Images/instagram.png" class="social-media" alt="Instagram-Logo"> </a>
                 <a href="https://discord.io/hackcess"><img src="Images/discord.png" class="social-media" alt="Instagram-Logo"> </a>
             </div>
