--- a/html/cyberharcelement.html
+++ b/html/cyberharcelement.html
@@ -4,16 +4,17 @@
     <meta charset="UTF-8">
     <title>Cyberharcelement</title>
     <link rel="icon" type="image/ico" href="Images/favicon.ico">
-    <link rel="stylesheet" href="">
+    <link rel="stylesheet" href="../css/cyberharcelement.css">
     <link rel="stylesheet" href="../css/accueil.css">
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.2.6/gsap.min.js"></script>
     <meta name="description" content="Petit jeu ludique sur le cyber-espace et le monde qui l'entoure By Hackcess / Cyberharcelement">
+    <script type="text/javascript" src="../js/cyber.js"></script>
 
 </head>
 <body>
-    <header>
 
-    </header>
+    <h1><span >L'importance d'un bon mot de passe.</span></h1><br><br>
+
 
 
 </body>
