--- a/html/cyberharcelement.html
+++ b/html/cyberharcelement.html
@@ -4,19 +4,33 @@
     <meta charset="UTF-8">
     <title>Cyberharcelement</title>
     <link rel="icon" type="image/ico" href="Images/favicon.ico">
+
     <link rel="stylesheet" href="../css/cyberharcelement.css">
-    <link rel="stylesheet" href="../css/accueil.css">
+    <link rel="stylesheet" href="../css/accueil.css"
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.2.6/gsap.min.js"></script>
     <meta name="description" content="Petit jeu ludique sur le cyber-espace et le monde qui l'entoure By Hackcess / Cyberharcelement">
-    <script type="text/javascript" src="../js/cyber.js"></script>
+  
 
 </head>
 <body>
 
-    <h1><span >L'importance d'un bon mot de passe.</span></h1><br><br>
+    <div class=fakeMenu>
+        <div class="fakeButtons fakeClose"></div>
+        <div class="fakeButtons fakeMinimize"></div>
+        <div class="fakeButtons fakeZoom"></div>
+      </div>
+      <div class="fakeScreen">
+        <p style="font-size: 1.25em;"class="line1">&#91;&nbsp;&ldquo;Bienvenue sur ce module &rdquo;,<span class="cursor1">_</span></p>
+        <p class="line2">&nbsp;&nbsp;&ldquo;Cyberharcelement.&rdquo;,<span class="cursor2">_</span></p>
+        <p class="line3">&nbsp;&nbsp;&ldquo;Have Fun&rdquo;&nbsp;&#93;<span class="cursor3">_</span></p>
+        <p class="line4">><span class="cursor4">_</span></p>
+      </div>
+      
 
 
-
+       
+   
 </body>
 
 </html>
