UPDATE HTML & CSS

--- a/html/cyberharcelement.html
+++ b/html/cyberharcelement.html
@@ -5,7 +5,7 @@
     <title>Cyberharcelement</title>
     <link rel="icon" type="image/ico" href="Images/favicon.ico">
 
-    <link rel="stylesheet" href="../css/cyberharcelement.css">
+    <link rel="stylesheet" href="../css/terminal.css">
     <link rel="stylesheet" href="../css/accueil.css"
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.2.6/gsap.min.js"></script>
@@ -15,7 +15,7 @@
 </head>
 <body>
 
-    <div class=fakeMenu>
+    <div class=Terminal>
         <div class="fakeButtons fakeClose"></div>
         <div class="fakeButtons fakeMinimize"></div>
         <div class="fakeButtons fakeZoom"></div>
