UPDATE CSS & HTML

--- a/html/cyberharcelement.html
+++ b/html/cyberharcelement.html
@@ -6,7 +6,8 @@
     <link rel="icon" type="image/ico" href="Images/favicon.ico">
 
     <link rel="stylesheet" href="../css/terminal.css">
-    <link rel="stylesheet" href="../css/accueil.css"
+    <link rel="stylesheet" href="../css/cyberharcelement.css">
+    <link rel="stylesheet" href="../css/accueil.css">
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.2.6/gsap.min.js"></script>
     <meta name="description" content="Petit jeu ludique sur le cyber-espace et le monde qui l'entoure By Hackcess / Cyberharcelement">
@@ -26,7 +27,9 @@
         <p class="line3">&nbsp;&nbsp;&ldquo;Have Fun&rdquo;&nbsp;&#93;<span class="cursor3">_</span></p>
         <p class="line4">><span class="cursor4">_</span></p>
       </div>
-      
+      <p>&nbsp;</p>
+    <h4>L'importance d'un bon mot de passe </h4>
+    <center><img src="../Images/mdp.jpg" style="max-width:40%; max-height:40%; text-align:center;"><br></center><br>
 
 
        
