--- a/html/cyberharcelement.html
+++ b/html/cyberharcelement.html
@@ -395,7 +395,7 @@
 	<div style="text-align:center"><input type="button" value="Valider" onClick="valider()"></li><br><br>
 	<P><u>Si vous n'avez pas trouvé du premier coup, cela peut-être normal</u>, l'objectif d'une personne usurpant une identité est de paraître pour quelqu'un de normal ou même plus "vraie" que la personne qu'elle usurpe.</p>
 	<p>Si vous avez trouvé, c'est peut-être que vous avez le bon oeil ?</p>
-	<br><br><center><a href="#">haut de page</a></center>
+	<br><br><center><a href="#">Haut de page</a></center>
 	<center><p>ou</p><center>
 	<center><a href="../html/modules.html">Revenir aux modules</a></center><br>	
 	</div>
