--- a/html/cyberharcelement.html
+++ b/html/cyberharcelement.html
@@ -48,17 +48,6 @@
 
  
 
-   
-
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
-	<br>
 	<center> <h5><span style="color: red;"><B>Tester la complexité de votre mot de passe :</B></span></h4>
 		<h4>Vous allez tester à quel point votre mot de passe est efficace, plus celui-ci sera complexe (caractères spéciaux, majuscules, chiffres...), plus celui-ci sera dur à cracker.</h5>
   <div class="w3-container w3-sand">
@@ -87,7 +76,7 @@
                   alert("Mot de passe enregistré avec succès .️ ✔️")
                   }
                 </script>
-                </div><small class="password-strength__error text-danger js-hidden">Ce symbole n'est pas autorisé <strong>!</strong></small> <small class="form-text text-muted mt-2" id="passwordHelp"> Ajoutez 9 caractères ou plus, des lettres minucules, des lettres majuscules ainsi que des chiffres et des symboles pour avoir un mot de passe fort!</small>
+                </div><small class="password-strength__error text-danger js-hidden"></small>
               </div>
               <div class="password-strength__bar-block progress mb-4">
                 <div class="password-strength__bar progress-bar bg-danger" role="progressbar" aria-valuenow="0" aria-valuemin="0" aria-valuemax="100"></div>
