Modification ajout module 3

--- a/html/modules.html
+++ b/html/modules.html
@@ -4,16 +4,11 @@
    <meta charset="UTF-8">
    <title>MODULES</title>
    <link rel="icon" type="image/ico" href="Images/favicon.ico">
- 
    <link rel="stylesheet" type="text/css" href="../css/modules.css">
    <link rel="stylesheet" type="text/css" href="../css/index.css">
    <link rel="stylesheet" type="text/css" href="../css/accueil.css">
-
-
-
    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.2.6/gsap.min.js"></script>
    <meta name="description" content="Petit jeu ludique sur le cyber-espace et le monde qui l'entoure By Hackcess / Modules ">
-
 </head>
 <body>
    
@@ -53,9 +48,9 @@
             <p><a href="internet.html" style="text-decoration:none;"><strong>Clique ici pour commencer</strong></a></p>
           </div>
           <div style="background: url(../img/.jpg); background-repeat:no-repeat;width:100%;background-position:center;">
-            <h2 style="color:rgb(255, 255, 255);"><b>En dev</b></h2>
+            <h2 style="color:rgb(255, 255, 255);"><b>cyberattaques</b></h2>
 
-            <p><a href=""><strong>Clique ici pour commencer</strong></a></p>
+            <p><a href="cyberattaques.html"><strong>Clique ici pour commencer</strong></a></p>
           </div>
           <div style="background: url(../Images/quiz.jpg); background-repeat:no-repeat;width:100%;background-position:center;">
             <h2 style="color:rgb(255, 255, 255);"><b>Quatrième module : "Quiz " </b></h2>
