--- a/html/modules.html
+++ b/html/modules.html
@@ -47,7 +47,7 @@
            <h2 style="color:rgb(255, 255, 255);"><b>Deuxième module : "Internet"</b></h2>
             <p><a href="internet.html" style="text-decoration:none;"><strong>Clique ici pour commencer</strong></a></p>
           </div>
-          <div style="background: url(../img/.jpg); background-repeat:no-repeat;width:100%;background-position:center;">
+          <div style="background: url(../Images/Cyberattaques.jpg); background-repeat:no-repeat;width:100%;background-position:center;">
             <h2 style="color:rgb(255, 255, 255);"><b>cyberattaques</b></h2>
 
             <p><a href="cyberattaques.html"><strong>Clique ici pour commencer</strong></a></p>
