--- a/html/cyberattaques.html
+++ b/html/cyberattaques.html
@@ -2,8 +2,8 @@
 <html lang="fr">
 <head>
    <meta charset="UTF-8">
-   <title>MODULES</title>
-   <link rel="icon" type="image/ico" href="Images/favicon.ico">
+   <title>Cyberattaques</title>
+   <link rel="icon" type="image/ico" href="../Images/favicon.ico">
    <link rel="stylesheet" type="text/css" href="../css/modules.css">
    <link rel="stylesheet" type="text/css" href="../css/index.css">
    <link rel="stylesheet" type="text/css" href="../css/accueil.css">
@@ -23,6 +23,7 @@
          <div id="cyberattaque-timeline"  style="width: 100%; height: 600px"></div>
       </div>
    </div>
+   <br><br><center><a href="modules.html"> Retour aux modules </a></center>
 </body>
 <script>
    timeline = new TL.Timeline("informatique-timeline", 'https://docs.google.com/spreadsheets/d/1L95etTqFo797ZbZi3akdzz6tAs8z_BiQrFIZAELIJLs/edit?pli=1#gid=0');
