Modificiation questions module 3. Ajout lien 'module suivant' en bas de page

--- a/html/cyberharcelement.html
+++ b/html/cyberharcelement.html
@@ -419,8 +419,8 @@
 
 
 	<br><br><center><a href="#">Haut de page</a></center>
-	<center><p>ou</p><center>
-	<center><a href="../html/modules.html">Revenir aux modules</a></center><br>	
+	<br><br><center><a href="internet.html"> Module Suivant </a></center>
+	<br><br><center><a href="../html/modules.html">Revenir aux modules</a></center><br>	
 	</div>
 	
 
