--- a/html/internet.html
+++ b/html/internet.html
@@ -116,13 +116,9 @@
             <br><center><img src="../Images/exemple.jpg" style="max-width:50%; max-height:50%; text-align:center;"><br></center><br>
 
             <h3>Si tu as reussi à refaire cela bravo, tu as fini ce module, maintenant si tu veux en apprendre plus nous te conseillons cette vidéo : <br> <a href="https://www.youtube.com/watch?v=KsCUcBK9q14&t=40s"target="_blank">Créer un site en HTML (1/5) - 3 minutes pour coder avec Micode</a></h3>
-
-
-  
             </li>
-
-
          <br><br><center><a href="#">Haut de page</a></center>
+         <br><br><center><a href="cyberattaques.html"> Module Suivant </a></center>
          <br><br><center><a href="modules.html">Retour aux modules</a></center>
          
        </div> 
