--- a/html/cyberattaques.html
+++ b/html/cyberattaques.html
@@ -23,6 +23,8 @@
          <div id="cyberattaque-timeline"  style="width: 100%; height: 600px"></div>
       </div>
    </div>
+   <br><br><center><a href="#">Haut de page</a></center>
+   <br><br><center><a href="quiz.html"> Module Suivant </a></center>
    <br><br><center><a href="modules.html"> Retour aux modules </a></center>
 </body>
 <script>
