Adding copyright footer and header

--- a/html/cyberattaques.html
+++ b/html/cyberattaques.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
+   <!--
+        © Auteur : Théo Dufour, Julien Andreoli, Léonardo Heron, Aymeric Foulie<br>
+       >Ce(tte) œuvre est mise à disposition selon les termes de la Licence Creative Commons Attribution - Pas d'Utilisation Commerciale - Pas de Modification 4.0 International. 
+    -->
    <meta charset="UTF-8">
    <title>Cyberattaques</title>
    <link rel="icon" type="image/ico" href="../Images/favicon.ico">
@@ -26,6 +30,10 @@
    <br><br><center><a href="#">Haut de page</a></center>
    <br><br><center><a href="quiz.html"> Module Suivant </a></center>
    <br><br><center><a href="modules.html"> Retour aux modules </a></center>
+   <footer style="color: whitesmoke;text-align: center;padding: 3px;vertical-align: middle;margin-top: 20px;">
+      <p>© Auteur : Théo Dufour, Julien Andreoli, Léonardo Heron, Aymeric Foulie</p><br>
+      <a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/"><img alt="Licence Creative Commons" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-nd/4.0/88x31.png" /></a><br />Ce(tte) œuvre est mise à disposition selon les termes de la <a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/">Licence Creative Commons Attribution - Pas d&#39;Utilisation Commerciale - Pas de Modification 4.0 International</a>. 
+  </footer>
 </body>
 <script>
    timeline = new TL.Timeline("informatique-timeline", 'https://docs.google.com/spreadsheets/d/1L95etTqFo797ZbZi3akdzz6tAs8z_BiQrFIZAELIJLs/edit?pli=1#gid=0');
