--- a/html/quiz.html
+++ b/html/quiz.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
+    <!--
+        © Auteur : Théo Dufour, Julien Andreoli, Léonardo Heron, Aymeric Foulie<br>
+       >Ce(tte) œuvre est mise à disposition selon les termes de la Licence Creative Commons Attribution - Pas d'Utilisation Commerciale - Pas de Modification 4.0 International. 
+    -->
     <meta charset="UTF-8">
     <title>Quiz</title>
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -130,6 +134,12 @@ div.style.display = "none";
 <div class="suppr">
 <button onclick="maFonction()">_<button>
 </div>
+
+<footer style="color: whitesmoke;text-align: center;padding: 3px;vertical-align: middle;margin-top: 20px;">
+  © Auteur : Théo Dufour, Julien Andreoli, Léonardo Heron, Aymeric Foulie<br>
+  <a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/"><img alt="Licence Creative Commons" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-nd/4.0/88x31.png" /></a><br />Ce(tte) œuvre est mise à disposition selon les termes de la <a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/">Licence Creative Commons Attribution - Pas d&#39;Utilisation Commerciale - Pas de Modification 4.0 International</a>. 
+</footer>
+
 </body>
 
 </html>
