--- a/html/cyberharcelement.html
+++ b/html/cyberharcelement.html
@@ -1,6 +1,10 @@
 <!DOCTYPE html>
 <html lang="fr">
 <head>
+	<!--
+        © Auteur : Théo Dufour, Julien Andreoli, Léonardo Heron, Aymeric Foulie<br>
+       >Ce(tte) œuvre est mise à disposition selon les termes de la Licence Creative Commons Attribution - Pas d'Utilisation Commerciale - Pas de Modification 4.0 International. 
+    -->
     <meta charset="UTF-8">
     <title>Cyberharcelement</title>
     <link rel="icon" type="image/ico" href="../Images/favicon.ico">
@@ -423,7 +427,10 @@
 	<br><br><center><a href="../html/modules.html">Revenir aux modules</a></center><br>	
 	</div>
 	
-
+	<footer style="color: whitesmoke;text-align: center;padding: 3px;vertical-align: middle;margin-top: 20px;">
+        © Auteur : Théo Dufour, Julien Andreoli, Léonardo Heron, Aymeric Foulie<br>
+        <a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/"><img alt="Licence Creative Commons" style="border-width:0" src="https://i.creativecommons.org/l/by-nc-nd/4.0/88x31.png" /></a><br />Ce(tte) œuvre est mise à disposition selon les termes de la <a rel="license" href="http://creativecommons.org/licenses/by-nc-nd/4.0/">Licence Creative Commons Attribution - Pas d&#39;Utilisation Commerciale - Pas de Modification 4.0 International</a>. 
+    </footer>
 
        
    
