--- a/html/cyberattaques.html
+++ b/html/cyberattaques.html
@@ -14,7 +14,7 @@
 </head>
 <body>
    <div id="game-frame">
-      <div class='_object' data-object="console" data-id="console" data-params='["Bienvenue sur ce module ou vous allez découvrir l&#39histoire de l&#39informatique ainsi que quelques cyber-attaques. Pour passer au module suivant, répondez aux différentes questions. TAPEZ ? POUR VOIR LA QUESTION ACTIVE"]'></div>
+      <div class='_object' data-object="console" data-id="console" data-params='["Bienvenue sur ce module ou vous allez découvrir l&#39histoire de l&#39informatique ainsi que quelques cyber-attaques. Pour passer au module suivant, répondez aux différentes questions. TAPEZ ? POUR VOIR LA QUESTION ACTIVE."]'></div>
       <div class='_object' data-object="navbar" data-id="navbar"></div>
       <div class='_object' data-object="page" data-params='["navbar"]' data-id="Informatique">
          <div id="informatique-timeline"  style="width: 100%; height: 600px"></div>
